docker build timezone 제거 && vm option 추가