@@ -1,6 +1,6 @@
 #!/bin/sh
 
-JAVA_OPTS="-XX:+UseZGC -XX:MaxRAMPercentage=80.0"
+JAVA_OPTS="-XX:+UseZGC -XX:MaxRAMPercentage=80.0 -Duser.timezone=Asia/Seoul -Djava.net.preferIPv4Stack=true"
 
 if [ "prod" = "${PROFILE}" ]
 then
@@ -20,7 +20,7 @@ then
        -Dspring.profiles.active=${PROFILE} \
        ${JAVA_OPTS} \
        -javaagent:/scouter/scouter.agent.jar \
-       -Dscouter.config=/scouter/docker-local.conf \
+       -Dscouter.config=/scouter/scouter.conf \
        -Dobj_host_name=${IP} \
        -Dnet_collector_ip=${SCOUTER_COLLECTOR_IP} \
        -Dobj_name=${APP_NAME}-${POSTFIX} \
@@ -31,12 +31,5 @@ else
   java -Djava.security.egd=file:/dev/./urandom \
        -Dspring.profiles.active=${PROFILE} \
        ${JAVA_OPTS} \
-       -javaagent:/scouter/scouter.agent.jar \
-       -Dscouter.config=/scouter/docker-local.conf \
-       -Dobj_host_name=${IP} \
-       -Dnet_collector_ip=${SCOUTER_COLLECTOR_IP} \
-       -Dobj_name=${APP_NAME}-${POSTFIX} \
-       --add-opens=java.base/java.lang=ALL-UNNAMED \
-       -Djdk.attach.allowAttachSelf=true \
        org.springframework.boot.loader.launch.JarLauncher
 fi
